# menu-cache

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in
debian/: README.Debian  changelog  control  copyright  libmenu-cache-bin.install  libmenu-cache-dev.install  libmenu-cache-doc.install  libmenu-cache0.install  libmenu-cache1.install  libmenu-cache2.install  libmenu-cache3.install  rules  watch
debian/patches/: 01-binutils-gold.patch  libtool-fix.patch  series
docs/reference/libmenu-cache/: Makefile.am
libmenu-cache/: Makefile.am  Makefile.in  libmenu-cache.pc.in  menu-cache.c  menu-cache.h  menu-cache.h.in  test.c  version.h
menu-cache-daemon/: Makefile.am  menu-cached.c
menu-cache-daemon/man/: Makefile.am  menu-cached.sgml
menu-cache-gen/: .cvsignore  Makefile.am  Makefile.in  canonicalize.c  desktop-entries.c  desktop-entries.h  entry-directories.c  entry-directories.h  gmenu-tree.c  gmenu-tree.h  main.c  menu-cache-gen-old.c  menu-cache-gen.c  menu-compose.c  menu-merge.c  menu-monitor.c  menu-tags.h
po/: ChangeLog  LINGUAS  POTFILES.in  af.po  ar.po  as.po  be.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  kk.po  kn.po  ko.po  ky.po  (+34 more)
vapi/: libmenu-cache.vapi
